<resources>
    <string name="app_name">Fruits</string>
    <string name="backup">Backup</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="this_is_menu">This is menu</string>
    <string name="call">Call</string>
    <string name="friends">Friends</string>
    <string name="location">Location</string>
    <string name="mail">Mail</string>
    <string name="tasks">Tasks</string>
    <string name="tonygreendev_gmail_com">tonygreendev@gmail.com</string>
    <string name="tony_green">Tony Green</string>
</resources>